fastapi and express server

--- a/06._Simple_Servers/03._nodeTest1/package.json
+++ b/06._Simple_Servers/03._nodeTest1/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "softwareintegration",
+  "name": "03._test",
   "version": "1.0.0",
-  "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2",
-    "xml2js": "^0.6.2",
-    "yaml": "^2.7.0"
+    "express": "^4.21.2"
   }
 }
