--- a/00._Assignments/10b [Individual, Pairs, Group] Migrate from One Database to Another/package.json
+++ b/00._Assignments/10b [Individual, Pairs, Group] Migrate from One Database to Another/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "17._database_migration",
+  "name": "10b-migrate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/migrate.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "migrate": "node src/migrate.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,6 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "knex": "^3.1.0",
-    "pg": "^8.15.6"
+    "pg": "^8.16.0"
   }
 }
