--- a/00._Assignments/13a [Individual] GraphQL/node_apollo/tsconfig.json
+++ b/00._Assignments/13a [Individual] GraphQL/node_apollo/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
-    "rootDirs": ["src"],
+    "rootDir": "src",
     "outDir": "dist",
-    "lib": ["es2020"],
-    "target": "es2020",
+    "lib": ["es2022", "dom"],
+    "target": "es2022",
     "module": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "types": ["node"]
-  }
+    "types": ["node"],
+    "skipLibCheck": true
+  },
+  "include": ["src"]
 }
