--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.21.2",
     "xml2js": "^0.6.2",
     "yaml": "^2.7.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.29"
   }
 }
